--- a/templates/form.html
+++ b/templates/form.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <!-- <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='formCss.css') }}"> -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='/formCss.css') }}">
   <link href="D:\Flask\static\formCss.css" rel="stylesheet" type="text/css">
 </head>
 <body>
