--- a/templates/form.html
+++ b/templates/form.html
@@ -19,83 +19,83 @@
         <form class="needs-validation" novalidate="">
             <div class="row">
                 <div class="col-md-6 mb-3">
-                    <label for="firstName">Director name</label>
-                    <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
+                    <label for="DirectorName">Director name</label>
+                    <input type="text" class="form-control" id="Director" placeholder="" value="" required="">
                     <div class="invalid-feedback"> Directors' name is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName">Company name</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="CompanytName">Company name</label>
+                    <input type="text" class="form-control" id="Company" placeholder="" value="" required="">
                     <div class="invalid-feedback"> Company's name is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName">Director Identification Number (DIN)</label>
-                    <input type="number" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="DIN">Director Identification Number (DIN)</label>
+                    <input type="number" class="form-control" id="DIN" placeholder="" value="" required="">
                     <div class="invalid-feedback">DIN numbers is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName">Name (in full)</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="fullName">Name (in full)</label>
+                    <input type="text" class="form-control" id="fullName" placeholder="" value="" required="">
                     <div class="invalid-feedback"> Full Name is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName">Father’s Name (in full)</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="FatherName">Father’s Name (in full)</label>
+                    <input type="text" class="form-control" id="FatherName" placeholder="" value="" required="">
                     <div class="invalid-feedback">Father's name is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName">Address</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="Address">Address</label>
+                    <input type="text" class="form-control" id="Address" placeholder="" value="" required="">
                     <div class="invalid-feedback"> Address is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName">Mobile Nmber </label>
-                    <input type="number" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="MobileNmber">Mobile Nmber </label>
+                    <input type="number" class="form-control" id="MobileNumber" placeholder="" value="" required="">
                     <div class="invalid-feedback"> Valid Number is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName"> Income-tax PAN </label>
-                    <input type="number" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="IncomeTaxNo"> Income-tax PAN </label>
+                    <input type="number" class="form-control" id="Income-tax" placeholder="" value="" required="">
                     <div class="invalid-feedback"> Valid Number is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName">Occupation </label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="Occupation">Occupation </label>
+                    <input type="text" class="form-control" id="Occupation" placeholder="" value="" required="">
                     <div class="invalid-feedback"> Occupation is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName"> Date Of Birth </label>
-                    <input type="date" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="DOB"> Date Of Birth </label>
+                    <input type="text" class="form-control" id="dob" placeholder="" value="" required="">
                     <div class="invalid-feedback"> Valid Date is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName">Nationality</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="Nationality">Nationality</label>
+                    <input type="text" class="form-control" id="Nationality" placeholder="" value="" required="">
                     <div class="invalid-feedback"> Nationality is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName">Owner Name </label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for=">OwnerName">Owner Name </label>
+                    <input type="text" class="form-control" id=">Owner " placeholder="" value="" required="">
                     <div class="invalid-feedback">Owner's name is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName">City Name </label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="CityName">City Name </label>
+                    <input type="text" class="form-control" id="City" placeholder="" value="" required="">
                     <div class="invalid-feedback"> City's name is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName">Address of Establishment (Registered Office) </label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="RegisteredOffice">Address of Establishment (Registered Office) </label>
+                    <input type="text" class="form-control" id="RegisteredOffice" placeholder="" value="" required="">
                     <div class="invalid-feedback"> Address is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName">No. of companies in which I am already a Director and out of such companies the names of the companies in which I am a Managing Director, Chief Executive Officer, Whole time Director, Secretary, Chief Financial Officer, Manager.</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="para1">No. of companies in which I am already a Director and out of such companies the names of the companies in which I am a Managing Director, Chief Executive Officer, Whole time Director, Secretary, Chief Financial Officer, Manager.</label>
+                    <input type="text" class="form-control" id="para1" placeholder="" value="" required="">
                     <div class="invalid-feedback"> required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="lastName"> Particulars of membership No. and Certificate of practice No. if the applicant is a member of any professional Institute. Specifically state NIL if none  </label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                    <label for="para2"> Particulars of membership No. and Certificate of practice No. if the applicant is a member of any professional Institute. Specifically state NIL if none  </label>
+                    <input type="text" class="form-control" id="para2" placeholder="" value="" required="">
                     <div class="invalid-feedback"> required. </div>
                 </div>
        
