--- a/templates/form.html
+++ b/templates/form.html
@@ -89,11 +89,16 @@
                     <div class="invalid-feedback"> Address is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
+                    <label for="PlaceName">place </label>
+                    <input type="text" class="form-control" id="place" placeholder="" value="" required="">
+                    <div class="invalid-feedback"> City's name is required. </div>
+                </div>
+                <div class="mb-3">
                     <label for="para1">No. of companies in which I am already a Director and out of such companies the names of the companies in which I am a Managing Director, Chief Executive Officer, Whole time Director, Secretary, Chief Financial Officer, Manager.</label>
                     <input type="text" class="form-control" id="para1" placeholder="" value="" required="">
                     <div class="invalid-feedback"> required. </div>
                 </div>
-                <div class="col-md-6 mb-3">
+                <div class=" mb-3">
                     <label for="para2"> Particulars of membership No. and Certificate of practice No. if the applicant is a member of any professional Institute. Specifically state NIL if none  </label>
                     <input type="text" class="form-control" id="para2" placeholder="" value="" required="">
                     <div class="invalid-feedback"> required. </div>
